# raytracing

./: pyproject.toml
raytracing/: color.py  hittable.py  hittable_list.py  main.py  ray.py  sphere.py
