[tool.poetry]
name = "raytracing"
version = "0.1.0"
description = ""
authors = ["Steve Warner <steve.j.warner@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
